@@ -1,5 +1,10 @@
 2008-02-05  Satoshi Nakagawa <artension@gmail.com>
 
+	Changed to clear member list when received mode +a.
+	Changed to rebuild member list when received mode -a.
+
+2008-02-05  Satoshi Nakagawa <artension@gmail.com>
+
 	Added note for the encoding setting.
 
 ==== LimeChat 0.16 ====
